--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Star System Renderer</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"> <!-- Empty for now able to manage in the same file -->
         <script src="index.js" type="module"></script>
     </head>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        #container {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #star-system-canvas {
+            border: 1px solid black;
+            background-color: #000;
+            display: flex;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 
     <body>
         <div id="container">
