--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Star System Renderer</title>
-        <link rel="stylesheet" href="style.css"> <!-- Empty for now able to manage in the same file -->
-        <script src="index.js" type="module"></script>
-    </head>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Star System Renderer</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/3.4.3/gl-matrix-min.js"></script>
+    <script src="index.js" type="module"></script>
+</head>
 
-        #container {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-        #star-system-canvas {
-            border: 1px solid black;
-            background-color: #000;
-            display: flex;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    #container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-    <body>
-        <div id="container">
-            <canvas id="star-system-canvas"></canvas>
-        </div>
-    </body>
+    #star-system-canvas {
+        border: 1px solid black;
+        background-color: #000;
+        display: flex;
+        width: 80%;
+        height: 80%;
+    }
+</style>
+
+<body>
+    <div id="container">
+        <canvas id="star-system-canvas"></canvas>
+    </div>
+</body>
+
 </html>
