--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         width: 100vw;
         height: 100vh;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
@@ -34,11 +35,32 @@
         width: 80%;
         height: 80%;
     }
+
+    #controls {
+        margin-top: 10px;
+    }
+
+    #controls button {
+        margin: 0 5px;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    #controls button.active {
+        background-color: blue;
+        color: white;
+        border: none;
+    }
 </style>
 
 <body>
     <div id="container">
         <canvas id="star-system-canvas"></canvas>
+        <div id="controls">
+            <button id="3d-view">3D View</button>
+            <button id="top-view">Top View</button>
+        </div>
     </div>
 </body>
 
